--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@ logs
 *.iml
 rebar3.crashdump
 *~
+
+# Devenv
+.devenv*
+devenv.local.nix
+devenv.local.yaml
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
