--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: Apache-2.0
+# SPDX-FileCopyrightText: 2025 Stritzinger GmbH
+# SPDX-FileCopyrightText: 2026 Erlang Ecosystem Foundation
+
 .rebar3
 _build
 _checkouts
