--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,8 @@
 #!/usr/bin/env bash
 
+# SPDX-License-Identifier: Apache-2.0
+# SPDX-FileCopyrightText: 2026 Erlang Ecosystem Foundation
+
 export DIRENV_WARN_TIMEOUT=20s
 
 eval "$(devenv direnvrc)"
