--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,6 @@
+%% SPDX-License-Identifier: Apache-2.0
+%% SPDX-FileCopyrightText: 2025 Stritzinger GmbH
+
 {erl_opts, [debug_info]}.
 {deps, [
     {hackney, "1.25.0"}
