--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,17 @@
 %% SPDX-FileCopyrightText: 2025 Stritzinger GmbH
 
 {erl_opts, [debug_info]}.
+
 {deps, [
     {hackney, "1.25.0"}
 ]}.
+
+{project_plugins, [rebar3_hex, rebar3_ex_doc]}.
+
+{ex_doc, [
+    {extras, ["README.md"]},
+    {main, "README.md"},
+    {source_url, "https://github.com/erlef/cassone"}
+]}.
+
+{hex, [{doc, ex_doc}]}.
